--- a/style.css
+++ b/style.css
@@ -1,17 +1,72 @@
+*{background-color: aliceblue;}
+/*{background-image: url('background\ image.jpeg');
+background-repeat: no-repeat;}*/
 header{
-display: flex;
-justify-content: space-between;
+    display: flex;
+    width: 375px;
+    height: 48px;
+    padding: 4px 24px 4px 12px;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 .mylogo{
-    color: var(--primary-b-400, #6070FF);
-    text-align: center;
-    font-family: Poppins;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 20px; /* 111.111% */
+    display: flex;
+padding: 10px 12px;
+align-items: center;
+color: var(--primary-b-400, #6070FF);
+text-align: center;
+font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 20px; /* 111.111% */
 }
 .menu_icon{
-    width: 24px;
-    height: 24px;
+    display: flex;
+padding: 8px;
+align-items: flex-start;
+width: 24px;
+height: 24px;
+
+}
+.headline{
+    display: inline-flex;
+padding: 114px 24px;
+flex-direction: column;
+gap: 12px;
+}
+.primaryText{
+    display: flex;
+width: 327px;
+height: 150px;
+flex-direction: column;
+justify-content: center;
+color: var(--neutrals-n-800, #172B4D);
+font-family: Poppins;
+font-size: 40px;
+font-style: normal;
+font-weight: 700;
+line-height: 52px; 
+}
+.primary2{
+    width: 327px;
+height: 146px;
+color: var(--neutrals-n-600, #344563);
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px;
+}
+.connect{
+    color: var(--primary-b-300, #7F8CFF);
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; 
+}
+.social{
+    width: 170.167px;
+height: 20px;
 }
