--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   zoom: 0%;
 }
+
 body {
   margin: 0;
   padding: 0;
@@ -10,72 +11,80 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .header {
   display: flex;
   width: 375px;
   height: 48px;
+  box-sizing: border-box;
   padding: 4px 24px 4px 12px;
   align-items: flex-start;
   gap: 199px;
 }
-.mylogo{
+
+.mylogo {
   display: flex;
   padding: 10px 12px;
   align-items: center;
-  color: var(--primary-b-400, #6070FF);
+  color: var(--primary-b-400, #6070ff);
   text-align: center;
-  font-family: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
-  }
-.menu_icon{
+}
+
+.menu_icon {
   display: flex;
   padding: 8px;
   align-items: flex-start;
   width: 24px;
   height: 24px;
 }
-.headline{
+
+.headline {
   display: inline-flex;
   padding: 114px 24px;
   flex-direction: column;
   gap: 12px;
 }
-.primaryText{
+
+.primaryText {
   display: flex;
   width: 327px;
   height: 150px;
   flex-direction: column;
   justify-content: center;
-  color: var(--neutrals-n-800, #172B4D);
-  font-family: Poppins;
+  color: var(--neutrals-n-800, #172b4d);
+  font-family: 'Poppins', sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
-  line-height: 52px; 
+  line-height: 52px;
 }
-.primary2{
+
+.primary2 {
   width: 327px;
   height: 146px;
   color: var(--neutrals-n-600, #344563);
-  font-family: Poppins;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
 }
-.connect{
-  color: var(--primary-b-300, #7F8CFF);
-  font-family: Poppins;
+
+.connect {
+  color: var(--primary-b-300, #7f8cff);
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px; 
+  line-height: 24px;
 }
-.social{
+
+.social {
   width: 170.167px;
   height: 20px;
 }
-
