--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   zoom: 0%;
 }
 
+body {
+  background-color: #f5f7f8;
+}
+
 .header {
   display: flex;
   width: 375px;
@@ -256,4 +260,183 @@
   font-style: normal;
   font-weight: 700;
   line-height: 44px;
+}
+
+.AboutMyself {
+  display: inline-flex;
+  padding: 114px 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  background-image: url(./Base\ about\ my\ self.png);
+  background-repeat: no-repeat;
+  background-position: top;
+  margin-top: 114px;
+}
+
+.top {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.primaryText5 {
+  display: flex;
+  width: 327px;
+  height: 35px;
+  flex-direction: column;
+  justify-content: center;
+  color: var(--neutrals-n-800, #172b4d);
+  font-family: 'Poppins', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+}
+
+.primaryText6 {
+  width: 327px;
+  height: 147px;
+  color: var(--neutrals-n-600, #344563);
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.socialMedia {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.primaryText7 {
+  color: var(--primary-b-300, #7f8cff);
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.aboutIcons {
+  display: flex;
+  align-items: stretch;
+}
+
+.aboutIcons img {
+  padding: 8px;
+}
+
+.normalButton1 {
+  display: flex;
+  padding: 12px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  border: 1px solid var(--primary-b-400, #6070ff);
+  color: var(--primary-b-500, #396df2);
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.51px;
+}
+
+.skillList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.languageFrame {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.skilllist {
+  display: flex;
+  padding: 16px 26px 16px 12px;
+  align-items: center;
+  gap: 12px;
+}
+
+.textSkill {
+  width: 237px;
+  color: #000;
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.down {
+  display: flex;
+  padding: 8px;
+  align-items: flex-start;
+}
+
+.down img {
+  width: 24px;
+  height: 24px;
+}
+
+.languageList {
+  display: flex;
+  padding: 12px;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.frame9 {
+  display: flex;
+  width: 303px;
+  padding: 9px 12px 9.716px 12px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 8px;
+  background: var(--neutrals-n-10, #f7f7f9);
+}
+
+.imageLanguage {
+  width: 48px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 48px;
+  border: 1px solid var(--neutrals-n-0, #fff);
+  background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+
+.textLanguage {
+  display: flex;
+  width: 215px;
+  height: 24px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: var(--neutrals-n-700, #253858);
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.separator {
+  width: 327px;
+  height: 1px;
+  flex-shrink: 0;
+  background: var(--neutrals-n-40, #dfe1e6);
 }
