--- a/style.css
+++ b/style.css
@@ -440,3 +440,139 @@ body {
   flex-shrink: 0;
   background: var(--neutrals-n-40, #dfe1e6);
 }
+
+.contact{
+  width: 375px;
+height: 779px;
+flex-shrink: 0;
+fill: var(--primary-b-400, #6070FF);
+background-image: url(Contact\ me.svg) ;
+}
+
+.contact_text{
+  display: flex;
+  width: 375px;
+  padding: 110px 5px 14px;
+  height: 56px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: var(--neutrals-n-0, #FFF);
+text-align: center;
+text-indent: 10px;
+
+font-family: Poppins;
+font-size: 40px;
+font-style: normal;
+font-weight: 700;
+line-height: 52px;
+}
+
+.contact_text2{
+  width: 325px;
+height: 137px;
+flex-shrink: 0;
+color: var(--primary-b-50, #EBEBFF);
+text-align: center;
+font-family: Poppins;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; /* 140% */
+padding-left: 10px;
+}
+
+.contactForm {
+  display: flex;
+  width: 375px;
+  height: auto;
+  box-sizing: border-box;
+  margin-top: 52px;
+  padding-right: 24px;
+  padding-left: 24px;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.name {
+  width: 327px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  border: 1px solid var(--base-100, #cfd8dc);
+  background: var(--mono-white, #fff);
+}
+
+.email {
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid var(--base-100, #cfd8dc);
+  background: var(--mono-white, #fff);
+}
+
+.feedback {
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid var(--base-100, #cfd8dc);
+  background: var(--mono-white, #fff);
+}
+
+.getInTouch {
+  border: 1px solid var(--base-100, #cfd8dc);
+  display: inline-flex;
+  width: 142px;
+  height: 48px;
+  top: 5317px;
+  left: 24px;
+  padding: 12px, 16px, 12px, 16px;
+  border-radius: 8px;
+  color: var(--primary-b-400, #6070ff);
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 44px;
+  letter-spacing: 0.51px;
+  padding-left: 12px;
+}
+
+::placeholder {
+  padding-left: 8px;
+  color: var(--neutral-n-800, #172b4d);
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  padding-top: 8px;
+}
+
+input {
+  box-sizing: border-box;
+  padding-left: 16px;
+  color: var(--neutral-n-800, #172b4d);
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+textarea {
+  width: 273px;
+  height: 140px;
+  flex-shrink: 0;
+  color: var(--neutrals-n-60, #acb8ca);
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+textarea:focus,
+input:focus {
+  outline:  none;
+}
