--- a/style.css
+++ b/style.css
@@ -441,15 +441,15 @@ body {
   background: var(--neutrals-n-40, #dfe1e6);
 }
 
-.contact{
+.contact {
   width: 375px;
-height: 779px;
-flex-shrink: 0;
-fill: var(--primary-b-400, #6070FF);
-background-image: url(Contact\ me.svg) ;
+  height: 779px;
+  flex-shrink: 0;
+  fill: var(--primary-b-400, #6070ff);
+  background-image: url(Contact\ me.svg);
 }
 
-.contact_text{
+.contact_text {
   display: flex;
   width: 375px;
   padding: 110px 5px 14px;
@@ -457,29 +457,28 @@ background-image: url(Contact\ me.svg) ;
   flex-direction: column;
   justify-content: center;
   flex-shrink: 0;
-  color: var(--neutrals-n-0, #FFF);
-text-align: center;
-text-indent: 10px;
-
-font-family: Poppins;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: 52px;
+  color: var(--neutrals-n-0, #fff);
+  text-align: center;
+  text-indent: 10px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
 }
 
-.contact_text2{
+.contact_text2 {
   width: 325px;
-height: 137px;
-flex-shrink: 0;
-color: var(--primary-b-50, #EBEBFF);
-text-align: center;
-font-family: Poppins;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 28px; /* 140% */
-padding-left: 10px;
+  height: 137px;
+  flex-shrink: 0;
+  color: var(--primary-b-50, #ebebff);
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 140% */
+  padding-left: 10px;
 }
 
 .contactForm {
@@ -570,9 +569,29 @@ textarea {
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+  padding-left: 2%;
+  padding-top: 1%;
 }
 
 textarea:focus,
 input:focus {
   outline:  none;
+}
+
+.footBar {
+  display: flex;
+  width: 132px;
+  height: 34px;
+  padding: 21px 121px 8px 120px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.footBar img {
+  width: 134px;
+  height: 3px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: var(--mono-black, #0d151e);
 }
