--- a/style.css
+++ b/style.css
@@ -481,7 +481,6 @@ body {
   font-weight: 700;
   line-height: 52px;
 }
-
 .contact_text2 {
   width: 325px;
   height: 137px;
@@ -492,9 +491,10 @@ body {
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 28px; /* 140% */
+  line-height: 28px;
   padding-left: 10px;
 }
+
 
 .contactForm {
   display: flex;
@@ -631,6 +631,8 @@ input:focus {
   display: none;
 }
 
+/*Desktop Version*/
+
 @media only screen and (min-width: 768px) {
   body {
     background-color: #f5f7f8;
@@ -638,6 +640,7 @@ input:focus {
 
   .header_headline {
     width: 100%;
+    animation: down 3s;
   }
 
   .header {
@@ -689,6 +692,7 @@ input:focus {
     font-weight: 700;
     line-height: 60px;
     letter-spacing: 0.37px;
+    animation: down 2s;
   }
 
   .primary2 {
@@ -700,6 +704,7 @@ input:focus {
     font-style: normal;
     font-weight: 400;
     line-height: 28px;
+    animation: down 2s;
   }
 
   .connect {
@@ -710,12 +715,21 @@ input:focus {
     font-weight: 500;
     line-height: 24px;
     width: 70%;
+    cursor: pointer;
+    animation: down 1s;
   }
 
   .social {
     width: 70%;
     height: 20px;
+    cursor: pointer;
+    animation: down 1s;
   }
+  .connect:hover{
+    color: #000;
+  }
+
+  /*Cards Section*/
 
   .works {
     display: grid;
@@ -736,11 +750,14 @@ input:focus {
     border: 1px solid var(--neutrals-n-40, #dfe1e6);
     background: var(--neutrals-n-0, #fff);
   }
-
+.card:hover{
+  animation: animate 2s;
+}
   .image1 {
     display: flex;
     width: 100%;
     height: 448px;
+    cursor: pointer;
   }
 
   .textCard {
@@ -889,6 +906,9 @@ input:focus {
     border: 1px solid var(--neutrals-n-40, #dfe1e6);
     background: var(--neutrals-n-0, #fff);
   }
+  .card2:hover{
+    animation: animate 2s;
+  }
 
   .primaryText8 {
     width: 100%;
@@ -931,6 +951,8 @@ input:focus {
     display: none;
   }
 
+  /*About My Self Section*/
+  
   .AboutMyself {
     background-color: white;
     box-sizing: border-box;
@@ -944,7 +966,6 @@ input:focus {
     gap: 24px;
     border-radius: 0 120px 0 0;
   }
-
   .top {
     width: 100%;
     height: 346px;
@@ -968,6 +989,7 @@ input:focus {
     font-weight: 700;
     line-height: 52px;
     margin: 0;
+    animation: down 4s;
   }
 
   .primaryText6 {
@@ -980,6 +1002,7 @@ input:focus {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+    animation: down 3s;
   }
 
   .socialMedia {
@@ -989,6 +1012,7 @@ input:focus {
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
+    animation: down 2s;
   }
 
   .primaryText7 {
@@ -1012,7 +1036,6 @@ input:focus {
     width: 100%;
     height: 40px;
   }
-
   .aboutIcons img {
     display: flex;
     padding: 8px;
@@ -1020,7 +1043,9 @@ input:focus {
     border-radius: 8px;
     cursor: pointer;
   }
-
+  .aboutIcons img:hover{
+    transform:  translate(0,-10px);
+  }
   .normalButton:hover {
     color: var(--neutrals-n-600, #344563);
   }
@@ -1064,6 +1089,7 @@ input:focus {
     align-items: flex-start;
     width: 24px;
     height: 24px;
+    cursor: pointer;
   }
 
   .languageList {
@@ -1081,6 +1107,10 @@ input:focus {
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
+    cursor: pointer;
+  }
+  .frame9:hover{
+    transform: translate(-8px,-15px);
   }
 
   .textLanguage {
@@ -1102,5 +1132,139 @@ input:focus {
     height: 2px;
     flex-shrink: 0;
     background: var(--neutrals-n-40, #dfe1e6);
+  }
+  /*Contact Form*/
+  .contact{
+    width: 100%;
+height: 846px;
+flex-shrink: 0;
+background-image: url(contact\ form-\ background-shape-desktop.svg);
+display: flex;
+flex-direction: column;
+align-items: center;
+  }
+  .contact_text{
+    display: flex;
+width: 100%;
+height: 56px;
+flex-direction: column;
+justify-content: center;
+color: var(--neutrals-n-0, #FFF);
+text-align: center;
+
+font-family: Poppins,sans-serif;
+font-size: 40px;
+font-style: normal;
+font-weight: 700;
+line-height: 52px;
+  }
+  .contact_text2{
+    width: 42%;
+height: 102px;
+color: var(--primary-b-50, #EBEBFF);
+text-align: center;
+font-family: Poppins,sans-serif;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px;
+  }
+  .contactForm{
+    display: flex;
+flex-direction: column;
+align-items: center;
+gap: 27px;
+width: 40%;
+height: auto;
+  }
+  .name{
+    width: 100%;
+  height: 48px;
+  flex-shrink: 0;
+border-radius: 2px;
+border: 1px solid var(--base-100, #CFD8DC);
+background: var(--mono-white, #FFF);
+  }
+
+  .name{
+    border-radius: 2px;
+  border: 1px solid var(--base-100, #CFD8DC);
+  background: var(--mono-white, #FFF);
+  color: var(--neutral-n-800, #172B4D);
+  font-family: 'Poppins',sans-serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+
+  width: 70%;
+height: 48px;
+flex-shrink: 0;
+  }
+  .email{
+    border-radius: 2px;
+border: 1px solid var(--base-100, #CFD8DC);
+background: var(--mono-white, #FFF);
+color: var(--neutral-n-800, #172B4D);
+font-family: 'Poppins',sans-serif;
+font-size: 17px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px;
+
+width: 70%;
+height: 48px;
+flex-shrink: 0;
+  }
+  .feedback{
+    border-radius: 2px;
+    border: 1px solid var(--base-100, #CFD8DC);
+    background: var(--mono-white, #FFF);
+    color: var(--neutrals-n-60, #B3BAC5);
+font-family: 'Poppins',sans-serif;
+font-size: 15px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; 
+
+width: 70%;
+height: 170px;
+flex-shrink: 0;
+  }
+  .getInTouch{
+    cursor: pointer;
+  }
+  .getInTouch:hover{
+    color: #000;
+  }
+
+  .footBar{
+    display: flex;
+    width: 65%;
+    height: 10px;
+  }
+  .footBar img{
+    width: 35%;
+    height: 5px;
+    display: flex;
+    border-radius: 10px;
+    background: var(--mono-black, #0d151e);
+  }
+  @keyframes animate {
+    from{
+      transform: translate(-250px,0);
+    }
+    to {
+      transform: translate(5px,0);
+    }
+  }
+  @keyframes down {
+    from{
+      transform: translate(0,-500px);
+    }
+    to{
+      transform: translate(0,5px);
+    }
+    
   }
 }
