--- a/style.css
+++ b/style.css
@@ -354,6 +354,14 @@ body {
   line-height: 24px;
 }
 
+.footBar img {
+  width: 35%;
+  height: 5px;
+  display: flex;
+  border-radius: 10px;
+  background: var(--mono-black, #0d151e);
+}
+
 .aboutIcons {
   display: flex;
   align-items: stretch;
@@ -481,6 +489,7 @@ body {
   font-weight: 700;
   line-height: 52px;
 }
+
 .contact_text2 {
   width: 325px;
   height: 137px;
@@ -494,7 +503,6 @@ body {
   line-height: 28px;
   padding-left: 10px;
 }
-
 
 .contactForm {
   display: flex;
@@ -603,14 +611,6 @@ input:focus {
   flex-shrink: 0;
 }
 
-.footBar img {
-  width: 134px;
-  height: 3px;
-  flex-shrink: 0;
-  border-radius: 10px;
-  background: var(--mono-black, #0d151e);
-}
-
 .desktopclient1 {
   display: none;
 }
@@ -631,7 +631,7 @@ input:focus {
   display: none;
 }
 
-/*Desktop Version*/
+/* Desktop Version */
 
 @media only screen and (min-width: 768px) {
   body {
@@ -725,11 +725,12 @@ input:focus {
     cursor: pointer;
     animation: down 1s;
   }
-  .connect:hover{
+
+  .connect:hover {
     color: #000;
   }
 
-  /*Cards Section*/
+  /* Cards Section */
 
   .works {
     display: grid;
@@ -750,9 +751,11 @@ input:focus {
     border: 1px solid var(--neutrals-n-40, #dfe1e6);
     background: var(--neutrals-n-0, #fff);
   }
-.card:hover{
-  animation: animate 2s;
-}
+
+  .card:hover {
+    animation: animate 2s;
+  }
+
   .image1 {
     display: flex;
     width: 100%;
@@ -906,7 +909,8 @@ input:focus {
     border: 1px solid var(--neutrals-n-40, #dfe1e6);
     background: var(--neutrals-n-0, #fff);
   }
-  .card2:hover{
+
+  .card2:hover {
     animation: animate 2s;
   }
 
@@ -951,8 +955,8 @@ input:focus {
     display: none;
   }
 
-  /*About My Self Section*/
-  
+  /* About My Self Section */
+
   .AboutMyself {
     background-color: white;
     box-sizing: border-box;
@@ -966,6 +970,7 @@ input:focus {
     gap: 24px;
     border-radius: 0 120px 0 0;
   }
+
   .top {
     width: 100%;
     height: 346px;
@@ -1043,9 +1048,19 @@ input:focus {
     border-radius: 8px;
     cursor: pointer;
   }
-  .aboutIcons img:hover{
-    transform:  translate(0,-10px);
+
+  .footBar img {
+    width: 134px;
+    height: 3px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: var(--mono-black, #0d151e);
   }
+
+  .aboutIcons img:hover {
+    transform: translate(0, -10px);
+  }
+
   .normalButton:hover {
     color: var(--neutrals-n-600, #344563);
   }
@@ -1109,8 +1124,9 @@ input:focus {
     gap: 16px;
     cursor: pointer;
   }
-  .frame9:hover{
-    transform: translate(-8px,-15px);
+
+  .frame9:hover {
+    transform: translate(-8px, -15px);
   }
 
   .textLanguage {
@@ -1133,138 +1149,130 @@ input:focus {
     flex-shrink: 0;
     background: var(--neutrals-n-40, #dfe1e6);
   }
-  /*Contact Form*/
-  .contact{
-    width: 100%;
-height: 846px;
-flex-shrink: 0;
-background-image: url(contact\ form-\ background-shape-desktop.svg);
-display: flex;
-flex-direction: column;
-align-items: center;
-  }
-  .contact_text{
-    display: flex;
-width: 100%;
-height: 56px;
-flex-direction: column;
-justify-content: center;
-color: var(--neutrals-n-0, #FFF);
-text-align: center;
 
-font-family: Poppins,sans-serif;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: 52px;
+  /* Contact Form */
+  .contact {
+    width: 100%;
+    height: 846px;
+    flex-shrink: 0;
+    background-image: url(contact\ form-\ background-shape-desktop.svg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  .contact_text2{
+
+  .contact_text {
+    display: flex;
+    width: 100%;
+    height: 56px;
+    flex-direction: column;
+    justify-content: center;
+    color: var(--neutrals-n-0, #fff);
+    text-align: center;
+    font-family: Poppins, sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 52px;
+  }
+
+  .contact_text2 {
     width: 42%;
-height: 102px;
-color: var(--primary-b-50, #EBEBFF);
-text-align: center;
-font-family: Poppins,sans-serif;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 28px;
+    height: 102px;
+    color: var(--primary-b-50, #ebebff);
+    text-align: center;
+    font-family: Poppins, sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
   }
-  .contactForm{
+
+  .contactForm {
     display: flex;
-flex-direction: column;
-align-items: center;
-gap: 27px;
-width: 40%;
-height: auto;
-  }
-  .name{
-    width: 100%;
-  height: 48px;
-  flex-shrink: 0;
-border-radius: 2px;
-border: 1px solid var(--base-100, #CFD8DC);
-background: var(--mono-white, #FFF);
+    flex-direction: column;
+    align-items: center;
+    gap: 27px;
+    width: 40%;
+    height: auto;
   }
 
-  .name{
+  .name {
     border-radius: 2px;
-  border: 1px solid var(--base-100, #CFD8DC);
-  background: var(--mono-white, #FFF);
-  color: var(--neutral-n-800, #172B4D);
-  font-family: 'Poppins',sans-serif;
-  font-size: 17px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-
-  width: 70%;
-height: 48px;
-flex-shrink: 0;
+    border: 1px solid var(--base-100, #cfd8dc);
+    background: var(--mono-white, #fff);
+    color: var(--neutral-n-800, #172b4d);
+    font-family: 'Poppins', sans-serif;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    width: 70%;
+    height: 48px;
+    flex-shrink: 0;
   }
-  .email{
+
+  .email {
     border-radius: 2px;
-border: 1px solid var(--base-100, #CFD8DC);
-background: var(--mono-white, #FFF);
-color: var(--neutral-n-800, #172B4D);
-font-family: 'Poppins',sans-serif;
-font-size: 17px;
-font-style: normal;
-font-weight: 400;
-line-height: 20px;
-
-width: 70%;
-height: 48px;
-flex-shrink: 0;
+    border: 1px solid var(--base-100, #cfd8dc);
+    background: var(--mono-white, #fff);
+    color: var(--neutral-n-800, #172b4d);
+    font-family: 'Poppins', sans-serif;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    width: 70%;
+    height: 48px;
+    flex-shrink: 0;
   }
-  .feedback{
+
+  .feedback {
     border-radius: 2px;
-    border: 1px solid var(--base-100, #CFD8DC);
-    background: var(--mono-white, #FFF);
-    color: var(--neutrals-n-60, #B3BAC5);
-font-family: 'Poppins',sans-serif;
-font-size: 15px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px; 
-
-width: 70%;
-height: 170px;
-flex-shrink: 0;
+    border: 1px solid var(--base-100, #cfd8dc);
+    background: var(--mono-white, #fff);
+    color: var(--neutrals-n-60, #b3bac5);
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    width: 70%;
+    height: 170px;
+    flex-shrink: 0;
   }
-  .getInTouch{
+
+  .getInTouch {
     cursor: pointer;
   }
-  .getInTouch:hover{
+
+  .getInTouch:hover {
     color: #000;
   }
 
-  .footBar{
+  .footBar {
     display: flex;
     width: 65%;
     height: 10px;
   }
-  .footBar img{
-    width: 35%;
-    height: 5px;
-    display: flex;
-    border-radius: 10px;
-    background: var(--mono-black, #0d151e);
-  }
+
   @keyframes animate {
-    from{
-      transform: translate(-250px,0);
+    from {
+      transform: translate(-250px, 0);
     }
+
     to {
-      transform: translate(5px,0);
+      transform: translate(5px, 0);
     }
   }
+
   @keyframes down {
-    from{
-      transform: translate(0,-500px);
+    from {
+      transform: translate(0, -500px);
     }
-    to{
-      transform: translate(0,5px);
+
+    to {
+      transform: translate(0, 5px);
     }
-    
   }
 }
