--- a/style.css
+++ b/style.css
@@ -7,10 +7,6 @@
 body {
   background-color: #f5f7f8;
 }
-.header_headline{
-  animation: down 3s;
-}
-
 .header {
   display: flex;
   width: 375px;
@@ -20,7 +16,9 @@ body {
   align-items: flex-start;
   gap: 199px;
 }
-
+.navbar{
+  display: none;
+}
 .mylogo {
   display: flex;
   padding: 10px 12px;
@@ -477,7 +475,7 @@ body {
 
 .contact_text {
   display: flex;
-  width: 375px;
+  width: 95%;
   padding: 110px 5px 14px;
   height: 56px;
   flex-direction: column;
@@ -665,11 +663,30 @@ input:focus {
     font-weight: 700;
     line-height: 20px;
   }
-
-  .menu_icon {
+.navbar{
+  display: flex;
+align-items: center;
+gap: 8px;
+}
+  .navicons{
     display: flex;
-    align-items: center;
-    gap: 8px;
+padding: 10px 12px;
+align-items: center;
+gap: 10px;
+color: var(--neutrals-n-600, #344563);
+text-align: center;
+font-family: 'Poppins',sans-serif;
+font-size: 15px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px;
+cursor: pointer;
+  }
+  .navicons:hover{
+    color: #4661f8;
+  }
+  .menu_icon {
+    display: none;
   }
 
   .headline {
