Pushing Main branch

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 body {
   background-color: #f5f7f8;
 }
-
 .header {
   display: flex;
   width: 375px;
@@ -17,11 +16,9 @@ body {
   align-items: flex-start;
   gap: 199px;
 }
-
-.navbar {
+.navbar{
   display: none;
 }
-
 .mylogo {
   display: flex;
   padding: 10px 12px;
@@ -666,6 +663,31 @@ input:focus {
     font-weight: 700;
     line-height: 20px;
   }
+.navbar{
+  display: flex;
+align-items: center;
+gap: 8px;
+}
+  .navicons{
+    display: flex;
+padding: 10px 12px;
+align-items: center;
+gap: 10px;
+color: var(--neutrals-n-600, #344563);
+text-align: center;
+font-family: 'Poppins',sans-serif;
+font-size: 15px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px;
+cursor: pointer;
+  }
+  .navicons:hover{
+    color: #4661f8;
+  }
+  .menu_icon {
+    display: none;
+  }
 
   .headline {
     display: flex;
@@ -1039,7 +1061,6 @@ input:focus {
     width: 100%;
     height: 40px;
   }
-
   .aboutIcons img {
     display: flex;
     padding: 8px;
